# vortex-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: BOARD_XDMA_BACKEND_ABI_PLAN.md  CURRENT_PASS_EXECUTION_FLOW.md  GPGPU_TASKS.md  GUPPY_CHAT_MVP_CHECKLIST.md  GUPPY_FULL_CASE_GIT_UPLOAD.md  GUPPY_RESIDENT_BOARD_HANDOFF.md  MAX_GPT2_BOARD_TEST.md  MLIR_IR_DESIGN_AND_PLAN.md  MVP_BACKEND_PASS_CHECKLIST.md  PHASE1_PYTORCH_FRONTEND_TASKS.md  PRE_VORTEX_TO_VORTEX_GENERAL_LOWERING.md  PRE_VORTEX_TO_VORTEX_PASS_PLAN.md  PRE_VORTEX_VORTEX_LAYERING_RULES.md  PYTORCH_ONNX_ONNX_MLIR_FRONTEND_PLAN.md  SIMPLIFIED_GPT2_PLAN.md  SIMULATION_BACKEND_INTEGRATION.md  TORCH_MLIR_INTEGRATION_PLAN.md  (+3 more)
include/: CMakeLists.txt
lib/: CMakeLists.txt  InitAllDialects.cpp  InitAllPasses.cpp
lib/Dialect/Vortex/IR/: CMakeLists.txt  VortexAttributes.cpp  VortexDialect.cpp  VortexOps.cpp
lib/Pipeline/: CMakeLists.txt  Pipelines.cpp
lib/Transforms/: CMakeLists.txt  ConvertVortexToLLVMPass.cpp  DistributeVortexLocalCopiesPass.cpp  FuseLinearWithBiasPass.cpp  InsertVortexBarriersPass.cpp  LowerLinalgInsideVortexKernelPass.cpp  LowerSIMTControlFlowPass.cpp  LowerVortexLocalMemoryPass.cpp  MapParallelLoopsToVortexLaunchPass.cpp  MarkVortexKernelPass.cpp  MaterializeBoardXDMAEntryPass.cpp  MaterializeSIMTControlFlowPass.cpp  MaterializeVortexAddressSpacesPass.cpp  NormalizeONNXFrontendPass.cpp  PlanVortexLocalMemoryLayoutPass.cpp  PrepareVortexToLLVMPass.cpp  PromoteTilesToVortexLocalPass.cpp  SummarizePreVortexPass.cpp  TileMatmulForPreVortexPass.cpp  ValidatePreVortexPass.cpp
(+167 files in other folders)
